--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Add your site or application content here -->
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  			<div class="container-fluid" style="background-color:#5a5a5a; margin: 0px;">
+  			<div class="container-fluid" style="background-color:#5a5a5a;">
   					<div class="navbar-header">
          				<a class="navbar-brand" href="#">Frontside Smith</a>	
         			</div>
